<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HomeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <ImageView
        android:id="@+id/background2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/levelText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/levelTextView"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/space7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/eLevelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/white_button"
                android:text="@string/eButton"
                android:textAllCaps="false"
                app:fontFamily="@font/basic" />

            <Button
                android:id="@+id/dLevelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/white_button"
                android:text="@string/dButton"
                android:textAllCaps="false"
                app:fontFamily="@font/basic" />

            <Button
                android:id="@+id/cLevelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/white_button"
                android:text="@string/cButton"
                android:textAllCaps="false"
                app:fontFamily="@font/basic" />

            <Button
                android:id="@+id/bLevelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/white_button"
                android:text="@string/bButton"
                android:textAllCaps="false"
                app:fontFamily="@font/basic" />

            <Button
                android:id="@+id/aLevelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/white_button"
                android:text="@string/aButton"
                android:textAllCaps="false"
                app:fontFamily="@font/basic" />

            <TextView
                android:id="@+id/space8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/rallyLengthText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rallyLengthTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />

            <TextView
                android:id="@+id/rallySeekBarText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/seekBarText"
                android:textColor="@android:color/background_light"
                app:fontFamily="@font/basic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/rallySeekBar"
                style="@android:style/Widget.SeekBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="100"
                android:progress="20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/space2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/speedText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/speedTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />

            <TextView
                android:id="@+id/speedSeekBarText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/speedSeekBarText"
                android:textColor="@android:color/background_light"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/speedSeekBar"
                style="@android:style/Widget.SeekBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="10"
                android:progress="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/space3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/setText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/setCountTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />

            <TextView
                android:id="@+id/setSeekBarText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/setSeekBarText"
                android:textColor="@android:color/background_light"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/setSeekBar"
                style="@android:style/Widget.SeekBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="20"
                android:progress="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/space4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/restText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/restTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />

            <TextView
                android:id="@+id/restSeekBarText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/restSeekBarText"
                android:textColor="@android:color/background_light"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/restSeekBar"
                style="@android:style/Widget.SeekBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="300"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fullCourtRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:checked="true"
                android:text="@string/fullCourt"
                android:textColor="@color/white"
                app:fontFamily="@font/basic" />

            <RadioButton
                android:id="@+id/sixCornersRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:text="@string/sixCorners"
                android:textColor="@color/white"
                app:fontFamily="@font/basic" />

            <RadioButton
                android:id="@+id/fourCornersRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:text="@string/fourCorners"
                android:textColor="@color/white"
                app:fontFamily="@font/basic" />

            <RadioButton
                android:id="@+id/twoCornersRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:text="@string/twoCorners"
                android:textColor="@color/white"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/netReturnsRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:text="@string/netReturns"
                android:textColor="@color/white"
                app:fontFamily="@font/basic" />

            <RadioButton
                android:id="@+id/dropReturnsRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:text="@string/dropReturns"
                android:textColor="@color/white"
                app:fontFamily="@font/basic" />

            <RadioButton
                android:id="@+id/smashReturnsRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:text="@string/smashReturns"
                android:textColor="@color/white"
                app:fontFamily="@font/basic" />

            <RadioButton
                android:id="@+id/clearReturnsRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:text="@string/clearReturns"
                android:textColor="@color/white"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/space6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/challengeButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/yellow_button"
                android:onClick="startChallengeMode"
                android:text="@string/challengeButton"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />


            <Button
                android:id="@+id/startButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/yellow_button"
                android:onClick="startTraining"
                android:text="@string/startButton"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />

            <TextView
                android:id="@+id/space9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:textColor="@android:color/background_light" />


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>