<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengeMode">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/speedChallenge"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center|start|bottom"
                android:text="@string/challengeModeTitle1"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/silver"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <WebView
                android:id="@+id/webView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_weight="0.5"
                android:background="@drawable/yellow_button"
                android:onClick="startChallenge1"
                android:text="@string/startButton"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/staminaChallenge"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center|start|bottom"
                android:text="@string/challengeModeTitle2"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/silver"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <WebView
                android:id="@+id/webView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_weight="0.5"
                android:background="@drawable/yellow_button"
                android:onClick="startChallenge2"
                android:text="@string/startButton"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center|start|bottom"
                android:text="@string/challengeModeTitle3"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/silver"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <WebView
                android:id="@+id/webView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_weight="0.5"
                android:background="@drawable/yellow_button"
                android:onClick="startChallenge3"
                android:text="@string/startButton"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">


        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>